--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ openai==2.16.0
 pypdf==6.6.2
 python-dotenv==1.2.1
 pdf2image==1.17.0
-transformers==5.0.0
+transformers==4.57.3
 torch==2.10.0
 pillow==12.1.0
+scipy==1.17.0
+timm==1.0.24
+einops==0.8.2
